# mkdocs-material-ekgf

./: .editorconfig  .gitignore  .markdownlintignore  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  INTEGRATION.md  LICENSE  MANIFEST.in  Makefile  QUICKSTART.md  README.md  STATUS.md  SUMMARY.md  package.json  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
.github/: COMMIT_CONVENTION.md  dependabot.yml
.github/workflows/: ci.yml  publish.yml
.husky/: pre-commit
mkdocs_material_ekgf/: __init__.py  main.html  mkdocs_theme.yml  social.py
mkdocs_material_ekgf/assets/javascripts/: images_dark.js  nav-section-links.js  refresh_on_toggle_dark_light.js  refresh_v2.js  search_bridge.js
mkdocs_material_ekgf/assets/stylesheets/: ekgf-theme.css
mkdocs_material_ekgf/partials/: content.html  ekgf-logo.html  footer.html  header.html  logo.html  omg-logo.html  palette.html  search-box.html  seo.html  tabs.html
