[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mkdocs-material-ekgf"
version = "1.0.0"
description = "A custom Material for MkDocs theme for EKGF documentation websites"
authors = [
  {name = "Jacobus Geluk", email = "jacobus.geluk@ekgf.org"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.14.2"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation",
]
dependencies = [
  "mkdocs>=1.5.0",
  "mkdocs-material>=9.0.0",
]

[project.urls]
Homepage = "https://ekgf.org"
Documentation = "https://github.com/EKGF/mkdocs-material-ekgf"
Repository = "https://github.com/EKGF/mkdocs-material-ekgf"
Issues = "https://github.com/EKGF/mkdocs-material-ekgf/issues"

[project.optional-dependencies]
dev = [
  "ruff>=0.8.0",
  "mypy>=1.11.0",
  "pytest>=8.3.0",
]

[project.entry-points."mkdocs.themes"]
material-ekgf = "mkdocs_material_ekgf"

[project.entry-points."mkdocs.plugins"]
material-ekgf = "mkdocs_material_ekgf:MaterialEkgfPlugin"

[tool.hatch.build.targets.wheel]
packages = ["mkdocs_material_ekgf"]

[tool.hatch.build.targets.wheel.force-include]
"mkdocs_material_ekgf" = "mkdocs_material_ekgf"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
